[package]
name = "hello_amethyst"
version = "0.1.0"
authors = ["FloydATC <floyd@atc.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version="0.15.3", features=["vulkan","no-slow-safety-checks"]}
nalgebra = "0.19.0"